# eDO_automatic_controller

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bash_configuation.sh  package.xml  setup.py
docker/: conf.env  docker-compose.yml  make_workspace.sh
docker/edo_gazebo/: Dockerfile
launch/: cartesian_control.launch  move_down.launch
launch/real_robot/: cartesian_control.launch  move_down.launch  simple_control.launch
launch/simulation/: simple_control.launch
launch_env/: init_connexion.launch  init_simulation.launch
src/edocontroller/: __init__.py  edo_abstract_class.py  edo_factory.py  edo_monitor.py
src/edocontroller/robot_interface/: __init__.py  edo_dummy.py  moveit_controller.py  moveit_simulator.py
src/example/: cartesian_control.py  move_down.py  simple_joint_control.py
src/geometry_representation/: __init__.py  exec_tests.py  geometry_fiducial_transform.py  geometry_parser.py  geometry_pose.py  geometry_transform.py  geometry_transformer.py  message_transformer.py  vector_quaternion.py
src/quaternion_extended/: __init__.py  quaternion_extended.py
