<?xml version="1.0"?>
<package format="2">
  <name>edo_automatic_controller</name>
  <version>0.1.0</version>
  <description>The edo_automatic_controller package</description>

  <maintainer email="greg.pichereau@gmail.com">Gregoire Pichereau</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/Bracewind/eDO_automatic_controller</url> -->
  <author email="greg.pichereau@gmail.com">Gregoire Pichereau</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
